# assetcues-saas-damage-poc

./: .gitignore  README.md
backend/: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.ps1  serve.py
backend/api/: index.py
backend/app/: config.py  main.py
backend/app/data/: demo_catalog.json  demo_catalog_images.json  reference_prices_GB.json  reference_prices_IN.json  (+2 more)
backend/docs/: response-schema.md
backend/scripts/: e2e_photo_upload_flow.py  open-firewall.ps1  restart-lan-api.ps1  seed_demo_assets.py  setup_supabase.py
backend/tests/: conftest.py  market_fixtures.py  test_age_parser.py  test_age_valuation_wiring.py  test_api.py  test_asset_description.py  test_capture_session_analyze.py  test_capture_session_market.py  test_capture_sessions_api.py  test_catalog_far.py  test_condition_grade.py  test_condition_mapper.py  test_demo_api.py  test_demo_context.py  test_erp_validation_engine.py  test_field_merger.py  test_gemini_thinking.py  test_golden_cases.py  test_history_api.py  test_history_repository.py  test_identity_validator.py  test_market_regions.py  test_nbv_comparison.py  test_nbv_engine.py  test_placement_mapper.py  test_prompts.py  test_reference_data.py  test_repair_policy.py  test_saas_assets_api.py  test_saas_image_compress.py  test_settings_market.py  test_tag_crop.py  test_tagging_ai_client.py  test_tagging_ai_status.py  test_token_usage.py  test_v6_demo_api.py  test_valuation_bullets.py  test_valuation_display.py  test_valuation_engine.py
(+358 files in other folders)
